syntax = "proto3";

option java_multiple_files = true;
option java_package = "snowblossom.mining.proto";
option java_outer_classname = "SnowBlossomMiningProto";

import "protolib/snowblossom.proto";

package snowblossom;

service MiningPoolService {
  rpc GetWork ( GetWorkRequest ) returns (stream WorkUnit) {}
  rpc SubmitWork ( WorkSubmitRequest ) returns ( SubmitReply ) {}
}

message GetWorkRequest {
  string client_id = 1;
  string pay_to_address = 2;
}

message WorkUnit {
  BlockHeader header = 1;
  int32 work_id = 2;
  bytes report_target = 3;
}

message WorkSubmitRequest {
  BlockHeader header = 1;
  int32 work_id = 2;
}

message PPLNSState {
  repeated ShareEntry share_entries = 1;
}

message ShareEntry {
  string address = 1;
  int64 share_count = 2;
}

service SharedMiningService {
  rpc GetWords ( GetWordsRequest ) returns ( GetWordsResponce ) {}
}

message GetWordsRequest {
  repeated int64 word_indexes = 1;
  int32 field = 2;
}

message GetWordsResponce {
  repeated bytes words = 1;
  bool wrong_field = 2;
}

